<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CognizantCharge</string>
    <string name="activityname">RechargeApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_activity_name">Login</string>
    <string name="userid_hint">User Id</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_title">Login</string>
    <string name="title_activity_home">CognizantCharge</string>
    <string name="register_button">Register</string>
    <string name="recharge_button">Recharge</string>
    <string name="title_activity_register_number">Register</string>
    <string name="title_activity_recharge">Recharge</string>
    <string name="title_activity_mobile">MobileActivity</string>
    <string name="title_activity_dth">DTHActivity</string>
    <string name="mobile_proceed">Proceed</string>
    <string name="title_activity_data_card">DataCardActivity</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_provider">Provider</string>
    <string name="mobile_amount">Amount</string>
    <string name="recharge_message">Register your mobile number</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="title_activity_recharge_payment_main">Payment</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv_number">CVV</string>
    <string name="transaction_password">Transaction Password</string>
    <string name="button_proceed">Proceed</string>
    <string name="button_pay">Pay</string>
    <string name="button_another_payment">Make another payment</string>
    <string name="button_register">Register</string>
    <string name="title_activity_transaction">Payment</string>
    <string name="title_activity_success">CognizantCharge</string>

    <string-array name="number">
        
        
    </string-array>

</resources>