<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.rechargeapp.RechargePaymentMainActivity" >

        <RadioGroup
            android:id="@+id/radioGroup_paymenttype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="15dp" >

            <RadioButton
                android:id="@+id/radio_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/credit_card" />

            <RadioButton
                android:id="@+id/radio_debit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debit_card" />
        </RadioGroup>

        <EditText
            android:id="@+id/edit_cardnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/radioGroup_paymenttype"
            android:layout_below="@+id/radioGroup_paymenttype"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/card_number"
            android:inputType="numberSigned"
            android:maxLength="16" >
        </EditText>

        <EditText
            android:id="@+id/edit_expirydate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_cardnumber"
            android:layout_below="@+id/edit_cardnumber"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/expiry_date"
            android:inputType="date" >
        </EditText>

        <EditText
            android:id="@+id/edit_cvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_expirydate"
            android:layout_below="@+id/edit_expirydate"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:maxLength="3"
            android:hint="@string/cvv_number"
            android:inputType="numberSigned" >
        </EditText>

        <Button
            android:id="@+id/button_proceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_cvv"
            android:layout_below="@+id/edit_cvv"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="28dp"
            android:onClick="proceedpay"
            android:text="@string/button_proceed" />
    </RelativeLayout>
</ScrollView>