<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.rechargeapp.MobileActivity" >

        <Spinner
            android:id="@+id/mobile_number_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="58dp"
            android:entries="@array/number"
            android:hint="@string/mobile_number" />

        <EditText
            android:id="@+id/mobile_provider_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/mobile_number_spinner"
            android:layout_below="@+id/mobile_number_spinner"
            android:layout_marginTop="34dp"
            android:ems="10"
            android:hint="@string/mobile_provider" />

        <EditText
            android:id="@+id/mobile_amount_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/mobile_provider_edit"
            android:layout_below="@+id/mobile_provider_edit"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/mobile_amount"
            android:inputType="number" >

        </EditText>

        <Button
            android:id="@+id/mobile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobile_amount_edit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp"
            android:text="@string/mobile_proceed" >
        </Button>
    </RelativeLayout>

</ScrollView>