<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/login_user_id_edit"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="140dp"
            android:background="#f3f3f3"
            android:ems="10"
            android:hint="@string/userid_hint"
            android:textColor="#0099ff"
            android:textColorHint="#80b3ff" >
        </EditText>

        <EditText
            android:id="@+id/login_password_edit"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/login_user_id_edit"
            android:layout_marginTop="44dp"
            android:background="#f3f3f3"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="#0099ff"
            android:textColorHint="#80b3ff" />

        <Button
            android:id="@+id/login_button"
            style="?android:textAppearanceSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password_edit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:text="@string/login_button"
            android:textColor="#000"
            android:background="#00E676"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_login_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/login_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#4CAF50"
                android:layout_marginLeft="100dp"
                android:textSize="30sp" />

        </FrameLayout>
    </RelativeLayout>

</ScrollView>