<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:textColor="#4CAF50"
            android:text="@string/recharge_message"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edit_mobilenumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_message"
            android:layout_below="@+id/text_message"
            android:layout_marginTop="38dp"
            android:ems="10"
            android:hint="@string/hint_mobile_number"
            android:inputType="numberSigned" />

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_mobilenumber"
            android:layout_below="@+id/edit_mobilenumber"
            android:layout_marginTop="26dp"
            android:entries="@array/spinner_type" />

        <Spinner
            android:id="@+id/spinner_provider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/spinner_type"
            android:layout_below="@+id/spinner_type"
            android:layout_marginTop="28dp"
            android:entries="@array/spinner_provider" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/spinner_provider"
            android:layout_below="@+id/spinner_provider"
            android:layout_marginLeft="83dp"
            android:layout_marginTop="36dp"
            android:onClick="registerclick"
            android:text="@string/register_button" />
    </RelativeLayout>
</ScrollView>